nodegroups.tf
# EKS Node Groups
resource "aws_eks_node_group" "demo_node_group" {
  cluster_name    = aws_eks_cluster.demo_eks_cluster.name
  node_group_name = var.nodegroupname
  node_role_arn   = aws_iam_role.node.arn
  subnet_ids      = aws_subnet.eks-private[*].id

  scaling_config {
    desired_size = 4
    max_size     = 6
    min_size     = 4
  }

  ami_type       = var.ami_type
  capacity_type  = "ON_DEMAND"
  disk_size      = var.disk_size
  instance_types = var.instance_types

  tags = merge(
    var.tags
  )

  depends_on = [
    aws_iam_role_policy_attachment.node_AmazonEKSWorkerNodePolicy,
    aws_iam_role_policy_attachment.node_AmazonEKS_CNI_Policy,
    aws_iam_role_policy_attachment.node_AmazonEC2ContainerRegistryReadOnly,
  ]
}


# EKS Node IAM Role
resource "aws_iam_role" "node" {
  name = "${var.project}-${var.nodegroupname}-${var.environment}-Worker-Role"

  assume_role_policy = <<POLICY
{
  "Version": "2012-10-17",
  "Statement": [
    {
      "Effect": "Allow",
      "Principal": {
        "Service": "ec2.amazonaws.com"
      },
      "Action": "sts:AssumeRole"
    }
  ]
}
POLICY
}

resource "aws_iam_role_policy_attachment" "node_AmazonEKSWorkerNodePolicy" {
  policy_arn = "arn:aws:iam::aws:policy/AmazonEKSWorkerNodePolicy"
  role       = aws_iam_role.node.name
}

resource "aws_iam_role_policy_attachment" "node_AmazonEKS_CNI_Policy" {
  policy_arn = "arn:aws:iam::aws:policy/AmazonEKS_CNI_Policy"
  role       = aws_iam_role.node.name
}

resource "aws_iam_role_policy_attachment" "node_AmazonEC2ContainerRegistryReadOnly" {
  policy_arn = "arn:aws:iam::aws:policy/AmazonEC2ContainerRegistryReadOnly"
  role       = aws_iam_role.node.name
}


# EKS Node Security Group
resource "aws_security_group" "demo_eks_nodeSG" {
  name        = "${var.project}-${var.nodegroupname}-${var.environment}-node-sg"
  description = "Security group for all nodes in the cluster"
  vpc_id      = aws_vpc.eks-vpc.id

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
  from_port   = 80
  to_port     = 80
  protocol    = "tcp"
  cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
  from_port   = 443
  to_port     = 443
  protocol    = "tcp"
  cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
  from_port   = 30000
  to_port     = 32768
  protocol    = "tcp"
  cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "${var.project}-${var.nodegroupname}-${var.environment}-node-sg"
    "kubernetes.io/cluster/${var.environment}-cluster" = "owned"
    environment = var.environment
    nodegroupname = var.nodegroupname
    project = var.project
  }
}

resource "aws_security_group_rule" "nodes_internal" {
  description              = "Allow nodes to communicate with each other"
  from_port                = 0
  protocol                 = "-1"
  security_group_id        = aws_security_group.demo_eks_nodeSG.id
  source_security_group_id = aws_security_group.demo_eks_nodeSG.id
  to_port                  = 65535
  type                     = "ingress"
}

resource "aws_security_group_rule" "nodes_cluster_inbound" {
  description              = "Allow worker Kubelets and pods to receive communication from the cluster control plane"
  from_port                = 1025
  protocol                 = "tcp"
  security_group_id        = aws_security_group.demo_eks_nodeSG.id
  source_security_group_id = aws_security_group.demo_eks_clusterSG.id
  to_port                  = 65535
  type                     = "ingress"
}
